<resources>
    <string name="app_name">AlarmApp</string>
    <string name="add_alaram_activity_name">Add a New Alarm</string>
    <string name="add_alarm_activity_notice">새로운 알람을 추가하고 있습니다.</string>

    <string name="no_data">알람이 없습니다. 알람을 추가해주세요.</string>

    <string name="update_alarm_activity_notice">기존의 알람을 수정하고 있습니다.</string>
    <string name="dialog_memo_hint">이곳에 메모를 적으세요.</string>

    <string name="add_alaram_tv_belltype_defalut">진동</string>
    <string name="add_alaram_tv_repeat">반복 없음</string>
    <string name="add_alaram_tv_memo">메모 없음</string>

    <string name="add_alaram_memo_hint">이곳에 메모를 적으세요.</string>

    <!--요일 날짜 선택-->
    <string name="pick_week_day">반복할 요일을 선택해주세요</string>
    <string name="pick_date">선택한 날짜에 알람이 한번 울립니다.</string>

    <string name="empty_alarm_list">알람이 없습니다. 알람을 등록하세요.</string>

    <!--알람 등록-->
    <string name="alarm_time_set_toast">알람이 등록되었습니다.</string>

    <string name="alarm_screen_text">알람이 울리네요. 아래는 알람 내역입니다.</string>

    <string name="setting">setting</string>
</resources>
